--- a/index.html
+++ b/index.html
@@ -3,10 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="app.js"></script>
+        <link rel="stylesheet" href="style.css">
+        
     <title>Blackjack Game</title>
 </head>
-<body>
-    
-</body>
+    <body>
+        <div class="game-container">
+            <h1>♠ Blackjack ♣</h1>
+
+            <div>
+                <div>
+                    <h2>Dealer</h2>
+
+                    <div></div>
+
+                    <p>Score: 0</p>
+                </div>
+
+                <div>
+                    <h2>You</h2>
+
+                    <div></div>
+
+                    <p>Score: 0</p>
+                </div>
+            </div>
+
+            <div>
+                <button>Start Game</button>
+                <button>Hit</button>
+                <button>Stand</button>
+            </div>
+
+            <p></p>
+        </div>
+
+        <script src="app.js"></script>
+    </body>
 </html>
