Add New Card function

--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
         <div class="game-container">
             <h1>♠ Blackjack ♣</h1>
 
+            <p id="message-el">Want to play a round?</p>
+
+            <p id="cards-el">Cards:</p>
+
+            <p id="sum-el">Sum:</p>
+
             <div class="board">
                 <div id="dealer-hand" class="hand">
                     <h2>Dealer</h2>
 
-                    <div id="dealer-cards" class="cards"></div>  <!-- This is an empty container where cards will appear. (from JS) -->
+                    <div id="dealer-cards" class="cards"></div>         <!-- // This is an empty container where cards will appear. (from JS) -->
 
                     <p class="dealer-score">Score: 0</p>
                 </div>
@@ -23,7 +29,7 @@
                 <div id="player-hand" class="hand">
                     <h2>You</h2>
 
-                    <div id="player-cards" class="cards"></div>    <!-- This is an empty container where cards will appear. (from JS) -->
+                    <div id="player-cards" class="cards"></div>         <!-- // This is an empty container where cards will appear. (from JS) --> 
 
                     <p class="player-score">Score: 0</p>
                 </div>
@@ -31,7 +37,7 @@
 
             <div class="buttons">
                 <button id="btn-start" onclick="startGame()">START GAME</button>
-                <button id="btn-hit">HIT</button>
+                <button id="btn-hit" onclick="newCard()">HIT</button>
                 <button id="btn-stand">STAND</button>
             </div>
 
