Add player initialization and display player chips in the UI

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <div class="buttons">
     <button id="btn-start" onclick="startGame()">START GAME</button>
     <button id="btn-hit" onclick="newCard()">HIT</button>
+    <p id="player-el"></p>
   </div>
 </div>
 
